# loxewyx-app

./: .gitignore  README.md  bun.lockb  index.html  package.json  test.html  vite.config.ts
public/: project.eki
src/: App.scss  App.tsx  env.tsx  fonts.scss  global.scss  globals.scss  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/assets/: config.json  config.prod.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  fs.rs  lib.rs  main.rs  watcher.rs  ws.rs
src/components/: About.scss  About.tsx  Browse.scss  Browse.tsx  Editor.scss  Editor.tsx  Home.scss  Home.tsx  Message.scss  Message.tsx  NotFound.tsx  Piano.scss  Piano.tsx  Test.tsx
src/components/Editor/: Syntax.tsx  index.tsx
src/components/Message/: Chat.tsx  Login.tsx  Message.scss  Signup.tsx  TestChat.tsx  index.tsx
src/components/Message/Chat/: ChatBubble.tsx  EmojiMenu.tsx  icons.tsx  index.tsx
src/components/Piano/: Piano.scss  index.tsx  range.tsx
src/components/editor/: monacoConfig.tsx
src/handlers/: Auth.tsx
src/icons/: Collapse.tsx  Expand.tsx  Heart.tsx  Minimize.tsx  Power.tsx  Skull.tsx  Smile.tsx  customicon.d.ts  index.tsx
src/interfaces/: Error.tsx  Message.tsx  User.tsx
src/signals/: Auth.tsx  DarkTheme.tsx  Editor.tsx  Menu.tsx  Piano.tsx
src/templates/: Footer.tsx  Inputs.tsx  Loading.tsx  MenuBar.tsx  NoConnection.tsx  Sidebar.tsx
src/types/: react-window.d.ts
