[package]
name = "Ekilox"
version = "0.0.1"
description = "Ekilox by LoXewyX"
authors = ["loxewyx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ekilox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-websocket = "2.0.0-beta.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8.1"
mountpoints = "0.2.1"
chrono = "0.4.38"
tokio = "1.38.0"
mongodb = "3.0.1"
dotenv = "0.15.0"
regex = "1.10.5"
bcrypt = "0.15.1"
lazy_static = "1.5.0"
rand = "0.8.5"
hex = "0.4.3"
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
uuid = "1.10.0"
