[package]
name = "Ekilox"
version = "0.0.1"
description = "Ekilox by LoXewyX"
authors = ["loxewyx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ekilox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.38.0"
jwalk = "0.8.1"
mountpoints = "0.2.1"
chrono = "0.4.38"
